# autoware_carla_observer_evaluator

./: README.md  carla_envs.sh  carla_native_dds_setup.md  carla_vehicle_spawner.py
config/: config.yaml
doc/: Design.md  ae2ea_io.plantuml  leaderboard_evaluator.py  pid_tuning_results_audi_etron.ods
docker/: Dockerfile  carla.repos  docker_setup.sh  entrypoint.sh  requirements.txt  ros2.repos
resources/routes/: short_route_2_Town10.xml  town01_parking_pedestrian_crossing_short.xml  town10_parking_crossing.xml
src/autoware_carla_cpp_bridge/: CMakeLists.txt  package.xml
src/autoware_carla_cpp_bridge/include/autoware_carla_cpp_bridge/: aw_carla_bridge.hpp  camera_bridge.hpp  lidar_bridge.hpp
src/autoware_carla_cpp_bridge/launch/: aw_carla_cpp_bridge.launch.py
src/autoware_carla_cpp_bridge/src/: aw_carla_bridge.cpp  aw_carla_bridge_node.cpp  camera_bridge.cpp  lidar_bridge.cpp
src/tum_agents/autoware_agent/: aw_converter.py  aw_e2e.py  aw_priviliged.py  cosmos_zenoh_mrm.py  mrm_trigger.py  tum_ros_base_agent.py  zenoh_camera_publisher.py  zenoh_cosmos_client.py  zenoh_mrm_bridge.py
utils/: spectator_pos.py  traffic_base_to_bulb.py
